--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -314,7 +314,6 @@ home-style1
                 <img alt="" class="img-contain" src="{{ top_products.1.image.url }}" />
               </a>
               <div class="info">
-                <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">5 ٪ تخفیف</span>
                 <a class="title fsz-14 mt-15 fw-600 hover-blue1"
                   href="{% url 'products:product_detail' pk=top_products.1.id slug=top_products.1.slug %}">{{top_products.1.title}}</a>
                 {% if top_products.1.need_to_call %}
@@ -426,8 +425,7 @@ home-style1
                 <span class="label fsz-11 py-1 px-3 rounded-pill bg-green1 text-white text-uppercase">دارای رتبه
                   برتر</span>
                 <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                  href="{% url 'products:product_detail' pk=top_products.3.id slug=top_products.3.slug %}">{{
-                  top_products.3.title }}</a>
+                  href="{% url 'products:product_detail' pk=top_products.3.id slug=top_products.3.slug %}">{{top_products.3.title }}</a>
                 {% if top_products.3.need_to_call %}
                 <p class="fsz-12 mt-2">
                   <i class="fas fa-phone-alt me-1"></i>
@@ -479,8 +477,7 @@ home-style1
               <div class="info">
                 <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">از پیش سفارش دادن</span>
                 <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                  href="{% url 'products:product_detail' pk=top_products.4.id slug=top_products.4.slug %}"> {{
-                  top_products.4.title }} </a>
+                  href="{% url 'products:product_detail' pk=top_products.4.id slug=top_products.4.slug %}"> {{top_products.4.title }} </a>
 
                 {% if top_products.4.need_to_call %}
                 <p class="fsz-12 mt-2">
@@ -531,10 +528,8 @@ home-style1
                 <img alt="" class="img-contain" src="{{ top_products.5.image.url }}" />
               </a>
               <div class="info">
-                <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white text-uppercase">15 ٪ تخفیف</span>
                 <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                  href="{% url 'products:product_detail' pk=top_products.5.id slug=top_products.5.slug %}">{{
-                  top_products.5.title }}</a>
+                  href="{% url 'products:product_detail' pk=top_products.5.id slug=top_products.5.slug %}">{{top_products.5.title}}</a>
 
                 {% if top_products.5.need_to_call %}
                 <p class="fsz-12 mt-2">
@@ -542,7 +537,7 @@ home-style1
                   <a href="#"> تماس بگیرین</a>
                 </p>
                 {% elif top_products.5.min_price %}
-                {{ top_products.5.min_price}} تومان
+                {{top_products.5.min_price}} تومان
                 {% else %}
                 <span class="text-danger"> عدم موجودی</span>
                 {% endif %}
@@ -584,10 +579,8 @@ home-style1
                 <img alt="" class="img-contain" src="{{ top_products.6.image.url }}" />
               </a>
               <div class="info">
-                <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">5 ٪ تخفیف</span>
                 <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                  href="{% url 'products:product_detail' pk=top_products.6.id slug=top_products.6.slug %}">{{
-                  top_products.6.title }}</a>
+                  href="{% url 'products:product_detail' pk=top_products.6.id slug=top_products.6.slug %}">{{top_products.6.title }}</a>
                 {% if top_products.6.need_to_call %}
                 <p class="fsz-12 mt-2">
                   <i class="fas fa-phone-alt me-1"></i>
@@ -642,7 +635,6 @@ home-style1
                     <img alt="" class="img-contain" src="{{ top_products.1.image.url }}" />
                   </a>
                   <div class="info">
-                    <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">5 ٪ تخفیف</span>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1"
                       href="{% url 'products:product_detail' pk=top_products.1.id slug=top_products.1.slug %}">{{top_products.1.title}}</a>
                     {% if top_products.1.need_to_call %}
@@ -738,8 +730,7 @@ home-style1
                     <span class="label fsz-11 py-1 px-3 rounded-pill bg-green1 text-white text-uppercase">دارای رتبه
                       برتر</span>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                      href="{% url 'products:product_detail' pk=top_products.3.id slug=top_products.3.slug %}">{{
-                      top_products.3.title }}</a>
+                      href="{% url 'products:product_detail' pk=top_products.3.id slug=top_products.3.slug %}">{{top_products.3.title }}</a>
                     {% if top_products.3.need_to_call %}
                     <p class="fsz-12 mt-2">
                       <i class="fas fa-phone-alt me-1"></i>
@@ -785,8 +776,7 @@ home-style1
                   <div class="info">
                     <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">از پیش سفارش دادن</span>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1"
-                      href="{% url 'products:product_detail' pk=top_products.4.id slug=top_products.4.slug %}"> {{
-                      top_products.4.title }} </a>
+                      href="{% url 'products:product_detail' pk=top_products.4.id slug=top_products.4.slug %}"> {{top_products.4.title }} </a>
                     {% if top_products.4.need_to_call %}
                     <p class="fsz-12 mt-2">
                       <i class="fas fa-phone-alt me-1"></i>
@@ -830,7 +820,6 @@ home-style1
                     <img alt="" class="img-contain" src="{{ top_products.5.image.url }}" />
                   </a>
                   <div class="info">
-                    <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white text-uppercase">15 ٪ تخفیف</span>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1"
                       href="{% url 'products:product_detail' pk=top_products.5.id slug=top_products.5.slug %}">{{
                       top_products.5.title }}</a>
@@ -877,7 +866,6 @@ home-style1
                     <img alt="" class="img-contain" src="{{ top_products.6.image.url }}" />
                   </a>
                   <div class="info">
-                    <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white">5 ٪ تخفیف</span>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1"
                       href="{% url 'products:product_detail' pk=top_products.6.id slug=top_products.6.slug %}">{{
                       top_products.6.title }}</a>
@@ -1062,7 +1050,7 @@ home-style1
                   <div class="info">
                     <div class="tags">
 
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
+                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">جدید</span>
                     </div>
                     <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="{% url 'products:product_detail' pk=product.id slug=product.slug %}">{{product.title}}</a>
 
@@ -1082,245 +1070,7 @@ home-style1
               {% endfor %}
 
             </div>
-            <div class="slider-controls">
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
-            </div>
-          </div>
-        </div>
-        <div aria-labelledby="pills-tab2-tab" class="tab-pane fade" id="pills-tab2" role="tabpanel">
-          <div class="products-slider">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <small class="fsz-11 py-1 px-3 rounded-pill color-red1 border-red1 border">قسط 0 ٪</small>
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod3.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod3.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white text-uppercase">15 ٪
-                        تخفیف</span>
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">دستگاه اسپرسو
-                      دستی Durotan ، سازنده قهوه</a>
-                    <div class="stars fsz-13 mt-2">
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <span>(34)</span>
-                    </div>
-                    <p class="price color-red1 mt-2 fsz-20">
-                      489.00 تومان<span class="old-price color-999 text-decoration-line-through ms-2 fsz-16">619.00
-                        تومان</span>
-                    </p>
-                  </div>
-
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod7.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod7.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-red1 text-white text-uppercase">15 ٪
-                        تخفیف</span>
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">دوربین Conar
-                      DSLR EOS II ، فقط بدن</a>
-                    <div class="stars fsz-13 mt-2">
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star"></i>
-                      <span>(5)</span>
-                    </div>
-                    <p class="price color-red1 mt-2 fsz-20">
-                      579.00 تومان<span class="old-price color-999 text-decoration-line-through ms-2 fsz-16">819.00
-                        تومان</span>
-                    </p>
-                  </div>
-
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod8.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod8.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-cyan1 text-white text-uppercase">جدید</span>
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">تلویزیون LED
-                      Android 49 اینچ کلاس 49 اینچ (1080p)</a>
-                    <p class="price mt-2 fsz-20">3،029.50 تومان</p>
-                  </div>
-
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <small class="fsz-11 py-1 px-3 rounded-pill color-red1 border-red1 border">قسط 0 ٪</small>
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod9.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod9.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">مورد بازی
-                      Gigabyte PC ، Core i7 ، 32 گیگابایت رم</a>
-                    <div class="stars fsz-13 mt-2">
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <span>(2)</span>
-                    </div>
-                    <p class="price mt-2 fsz-20">1،279.00 تومان</p>
-                  </div>
-
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <small class="fsz-11 py-1 px-3 rounded-pill color-red1 border-red1 border">قسط 0 ٪</small>
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod10.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod10.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-green1 text-white text-uppercase">دارای رتبه
-                        برتر</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">Scepter 32
-                      اینچی تلویزیون اینترنتی</a>
-                    <div class="stars fsz-13 mt-2">
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <i class="fas fa-star active"></i>
-                      <span>(12)</span>
-                    </div>
-                    <p class="price mt-2 fsz-20">610.00 تومان</p>
-                  </div>
-
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="product-card">
-                  <div class="top">
-                    <div class="icons">
-                      <a class="icon fav" href="#0">
-                        <i class="fal fa-heart"></i>
-                      </a>
-                      <a class="icon" href="#0">
-                        <i class="fal fa-sync"></i>
-                      </a>
-                      <a class="icon" data-fancybox="deal" href="img/products/prod8.png">
-                        <i class="fal fa-eye"></i>
-                      </a>
-                    </div>
-                  </div>
-                  <a class="img th-160 mb-20 d-block" href="../pages/single_product.html">
-                    <img alt="" class="img-contain" src="{% static 'img/products/prod8.png' %}" />
-                  </a>
-                  <div class="info">
-                    <div class="tags">
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-cyan1 text-white text-uppercase">جدید</span>
-                      <span class="label fsz-11 py-1 px-3 rounded-pill bg-blue1 text-white text-uppercase">پرفروش</span>
-                    </div>
-                    <a class="title fsz-14 mt-15 fw-600 hover-blue1" href="../pages/single_product.html">تلویزیون LED
-                      Android 49 اینچ کلاس 49 اینچ (1080p)</a>
-                    <p class="price mt-2 fsz-20">3،029.50 تومان</p>
-                  </div>
-
-                </div>
-              </div>
-            </div>
-            <div class="slider-controls">
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
-              <div class="swiper-button-next"></div>
-            </div>
+           
           </div>
         </div>
       </div>
