--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -485,8 +485,7 @@
         <div class="row align-items-center">
           <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
             <p class="mb-0">
-              © {% now "Y" %} تمام حقوق برای <a href="{% url 'home:home' %}" class="text-white">{{
-                company_info.name|default:"فروشگاه اینترنتی" }}</a> محفوظ است.
+              © {% now "Y" %} تمام حقوق برای <a href="https://isempty.online" class="text-white">علی مهدوی نیا</a> محفوظ است.
             </p>
           </div>
           <div class="col-md-6 text-center text-md-end">
