--- a/main/home/templates/about.html
+++ b/main/home/templates/about.html
@@ -114,28 +114,45 @@
       </section>
 
       <!-- بخش شرکا -->
-      <section class="p-30 radius-4 bg-white mt-4 wow fadeInUp">
-        <h3 class="fw-bold mb-4 text-center">شرکای تجاری ما</h3>
-        <div class="partners-logos">
-          <div class="row align-items-center justify-content-center g-4">
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-              <img src="{% static 'pages/img/about/logos/logo1.png' %}" alt="شریک تجاری" class="img-fluid grayscale-hover">
+      <div class="swiper-wrapper">
+  {% for partner in partners %}
+  <div class="swiper-slide">
+    <div class="partner-card text-center bg-white rounded-3 p-3 h-100">
+      {% if partner.website_url %}
+        <a href="{{ partner.website_url }}" target="_blank" rel="noopener noreferrer" class="d-block h-100">
+      {% else %}
+        <div class="d-block h-100">
+      {% endif %}
+      
+        <div class="partner-logo th-100 mb-3">
+          {% if partner.logo %}
+            <img src="{{ partner.logo.url }}" alt="{{ partner.name }}" class="img-contain">
+          {% else %}
+            <div class="no-logo-placeholder d-flex align-items-center justify-content-center h-100">
+              <i class="fas fa-building fs-1 text-muted"></i>
             </div>
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-              <img src="{% static 'pages/img/about/logos/logo2.png' %}" alt="شریک تجاری" class="img-fluid grayscale-hover">
-            </div>
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-              <img src="{% static 'pages/img/about/logos/logo3.png' %}" alt="شریک تجاری" class="img-fluid grayscale-hover">
-            </div>
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-              <img src="{% static 'pages/img/about/logos/logo4.png' %}" alt="شریک تجاری" class="img-fluid grayscale-hover">
-            </div>
-            <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-              <img src="{% static 'pages/img/about/logos/logo5.png' %}" alt="شریک تجاری" class="img-fluid grayscale-hover">
-            </div>
-          </div>
+          {% endif %}
         </div>
-      </section>
+        
+        <h5 class="fsz-16 fw-bold mt-3 mb-2">{{ partner.name }}</h5>
+        
+        {% if partner.description %}
+          <p class="fsz-12 color-666 mt-2 mb-0">{{ partner.description|truncatewords:10 }}</p>
+        {% endif %}
+      
+      {% if partner.website_url %}
+        </a>
+      {% else %}
+        </div>
+      {% endif %}
+    </div>
+  </div>
+  {% empty %}
+  <div class="swiper-slide">
+    <div class="alert alert-info rounded-3 mb-0">همکاری ثبت نشده است</div>
+  </div>
+  {% endfor %}
+</div>
 
       <!-- بخش CTA -->
       <section class="p-30 radius-4 bg-primary text-white mt-4 mb-4 wow fadeInUp">
