--- a/main/assets/common/css/common_style.rtl.css
+++ b/main/assets/common/css/common_style.rtl.css
@@ -1726,7 +1726,7 @@ input:focus {
 
 .img-cover {
     width: 100%;
-    height: 65px;
+    height: 100%;
     -o-object-fit: cover;
     object-fit: cover;
     display: inherit;
