--- a/main/products/templates/product_detail.html
+++ b/main/products/templates/product_detail.html
@@ -391,32 +391,16 @@
   </div>
 </div>
 
+
 <!-- Mobile fixed action bar -->
 <section class="fixed-section d-lg-none w-100" style="position:fixed; bottom: 0; left:0; z-index:1050; background:#fff; box-shadow: 0 -2px 10px rgba(0,0,0,0.1); z-index: 100;">
-      <div class="container d-flex align-items-center justify-content-between py-3">
-        <div class="fixed-section-actions d-flex justify-content-between w-100 align-items-center">
-              <button type="button"
-            class="butn btn-loading bg-green2 text-white radius-4 fw-500 fsz-12 text-uppercase py-2 px-4"
-            style="border: none; cursor: pointer;"
-            hx-post="{% url 'carts:cartadd' %}"
-            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-            hx-vals='{"variant":{{ variant.id }}, "product_id": {{product.id}}}'
-            hx-target="#product-list">
-        <span class="btn-text">به سبد خرید اضافه کنید</span>
-    </button>
-
-          <!-- <a href="#add-to-cart" class="btn btn-primary btn-sm ms-2">
-            <i class="la la-cart-plus me-1"></i>افزودن به سبد خرید
-          </a> -->
-          {% if product.min_price %}
-            <span class="me-3 fsz-16 fw-600 text-success">{{ product.min_price|intcomma }} تومان</span>
-          {% elif product.need_to_call %}
-            <span class="me-3 fsz-14 text-warning"><i class="fas fa-phone-alt me-1"></i> تماس بگیرید</span>
-          {% else %}
-            <span class="me-3 fsz-14 text-danger">عدم موجودی</span>
-          {% endif %}
-        </div>
+  <div class="container d-flex align-items-center justify-content-between py-3">
+    <div class="fixed-section-actions d-flex justify-content-between w-100 align-items-center">
+      <div id="product-list" class="w-100">
+        {% include 'product_count.html' with product=product %}
       </div>
+    </div>
+  </div>
 </section>
 
 
