--- a/main/home/templates/about.html
+++ b/main/home/templates/about.html
@@ -113,8 +113,8 @@
         </div>
       </section>
 
-
-      <!-- بخش شرکا (grid cards) -->
+    {% comment %}
+      <!-- بخش شرکا (grid cards)
       <section class="mt-4">
         <h3 class="fw-bold mb-4 text-center">شرکای تجاری ما</h3>
         <div class="row g-3 justify-content-center">
@@ -152,7 +152,8 @@
             </div>
           {% endfor %}
         </div>
-      </section>
+      </section> -->
+      {% endcomment %}
 
       <!-- بخش CTA -->
       <section class="p-30 radius-4 bg-primary text-white mt-4 mb-4 wow fadeInUp">
