--- a/main/home/templates/home.html
+++ b/main/home/templates/home.html
@@ -949,7 +949,7 @@ home-style1
             <div class="title mb-40">
               <div class="row align-items-center">
                 <div class="col-lg-8">
-                  <h3 class="fsz-30">همکاران و برندهای ما</h3>
+                  <h3 class="fsz-30"> برندهای ما</h3>
                 </div>
                 <div class="col-lg-4 text-lg-end mt-4 mt-lg-0">
                   <a class="more-btn fsz-14 text-uppercase fw-500" href="#">مشاهده همه<i class="fal fa-angle-left ms-1"></i></a>
